<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="service">传感器服务</string>
    <string name="main_text_set">文字类</string>
    <string name="tv_desc_main">工具集</string>
    <string name="text_select">请选择要转换的文件或者路径:</string>
    <string name="text_file_path">输入文件路径或者按键选择文件</string>
    <string name="cb_multi">允许多个目录</string>
    <string name="show_all">显示所有文件</string>
    <string name="spinner_from">从</string>
    <string name="spinner_to">到</string>
    <string name="app_name">dropletTools</string>
    <string name="dialog_read_from_dir">文件管理器</string>
    <string name="btn_transfer">转换</string>
    <string name="button_find_string">查找</string>
    <string name="edit_hint_find_string">输入您要查找的字符串</string>
    <string name="button_replace_string">替换</string>
    <string name="edit_hint_replace_string">输入您要替换的字符串或者正则表达式</string>
    <string name="check_box_regex">使用正则</string>
    <string name="find_result">查找结果</string>
    <string name="check_box_expand">扩展(\\n,\\r,\\t,\\0,……)</string>
    <string name="show_detail">显示详细信息</string>
    <string name="reserve_text">保留内容</string>
    <string name="ignore_case">不区分大小写</string>
    <string name="browse" translatable="false">...</string>
    <string name="title_activity_encoding_transfer">EncodingTransferActivity</string>
    <string name="title_activity_find_replace">FindReplaceActivity</string>
    <string name="main_test_set">工具集</string>
    <string name="main_test_anim">动画</string>
    <string name="main_test_sensor">传感器</string>
    <string name="main_test_sms">短信</string>
    <string name="main_test_gps">GPS</string>
    <string name="main_test_kbd">键盘</string>
    <string name="title_activity_animator">AnimatorActivity</string>
    <string name="anim_tv">动画测试文字</string>
    <string name="mainEditTextSmsNumberHint">号码№</string>
    <string name="mainEditTextSmsContentHint">发送的内容</string>
    <string name="mainButtonSmsSendText">发送</string>
    <string name="activity_step_counter_movements">运动</string>
    <string name="activity_step_counter_dispose">转到后台</string>
    <string name="activity_step_counter_stop">停止服务</string>
    <string name="activity_step_counter_delete_data">删除数据</string>
    <string name="activity_step_counter_compass">罗盘</string>
    <string name="activity_step_counter_sensor_simulator">仿真</string>
    <string name="activity_gps_button_all">获得系统所有的LocationProvider</string>
    <string name="activity_gps_button_filter">根据条件获取LocationProvider</string>
    <string name="activity_gps_button_special">获取指定的LocationProvider</string>
    <string name="title_activity_keyboard">KeyboardActivity</string>
</resources>
