<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="top.edroplet.encdec.activities.system.GpsActivity">
    <Button
        android:id="@+id/gpsActivityButtonAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_gps_button_all" />

    <Button
        android:id="@+id/gpsActivityButtonFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_gps_button_filter" />

    <Button
        android:id="@+id/gpsActivityButtonSpecial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_gps_button_special" />

    <TextView
        android:id="@+id/gpsActivityTextviewResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="#81BB4D"
        android:padding="5dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtClue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
