<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context="top.edroplet.encdec.activities.sensors.StepCounterActivity"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_weight="1">

		<Button
			android:id="@+id/stepCounterButtonDispose"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/activity_step_counter_dispose"/>

		<Button
			android:id="@+id/stepCounterButtonStop"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/activity_step_counter_stop"/>

		<Button
			android:id="@+id/stepCounterButtonDeleteData"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/activity_step_counter_delete_data"/>

	</LinearLayout>

	<top.edroplet.encdec.view.StepArcView
		android:id="@+id/sv"
		android:layout_width="180dp"
		android:layout_height="0dp"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="5dp"
		android:layout_weight="2"/>

	<top.edroplet.encdec.view.WalkingView
		android:id="@+id/walkingView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="7"/>

	<top.edroplet.encdec.view.RainbowBar
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:rainbowbar_color="@android:color/holo_blue_bright"
		app:rainbowbar_hspace="80dp"
		app:rainbowbar_vspace="10dp"
		android:layout_weight="1"/>

</LinearLayout>

